--- a/dominouix/dominoui/index.html
+++ b/dominouix/dominoui/index.html
@@ -13,15 +13,15 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="domino-ui.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/font/material-icons.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/plugins/bootstrap/css/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/plugins/node-waves/waves.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/plugins/animate-css/animate.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/plugins/morrisjs/morris.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/plugins/waitme/waitMe.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/css/style.css">
-    <link type="text/css" rel="stylesheet" href="dominoui/css/themes/all-themes.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/domino-ui.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/font/material-icons.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/plugins/bootstrap/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/plugins/node-waves/waves.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/plugins/animate-css/animate.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/plugins/morrisjs/morris.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/plugins/waitme/waitMe.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/dominoui/css/themes/all-themes.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -33,7 +33,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script src="dominoui/dominoui.nocache.js"></script>
+    <script src="/dominoui/dominoui.nocache.js"></script>
 </head>
 
 <!--                                           -->
