fix loaders issue

--- a/dominoui/plugins/morrisjs/spec/viz/test.html
+++ b/dominoui/plugins/morrisjs/spec/viz/test.html
@@ -10,7 +10,7 @@
     body {
       padding: 0;
       margin: 0;
-      badgeBackground-color: white;
+      background-color: white;
     }
     #chart {
       width: 500px;
