--- a/ui-demo/app/index.html
+++ b/ui-demo/app/index.html
@@ -3,22 +3,22 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/ui-demo/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link type="text/css" rel="stylesheet" href="/ui-demo/font/material-icons.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/plugins/bootstrap/css/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/plugins/node-waves/waves.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/plugins/animate-css/animate.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/plugins/morrisjs/morris.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/plugins/waitme/waitMe.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/css/style.css">
-    <link type="text/css" rel="stylesheet" href="/ui-demo/css/themes/all-themes.css">
-    <script src="/ui-demo/plugins/node-waves/waves.js" type="text/javascript"></script>
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/font/material-icons.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/plugins/bootstrap/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/plugins/node-waves/waves.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/plugins/animate-css/animate.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/plugins/morrisjs/morris.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/plugins/waitme/waitMe.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/ui-demo/app/css/themes/all-themes.css">
+    <script src="/ui-demo/app/plugins/node-waves/waves.js" type="text/javascript"></script>
 
     <title>ui-demo</title>
 
-    <script src="/ui-demo/app.nocache.js"></script>
+    <script src="/ui-demo/app/app.nocache.js"></script>
 </head>
 
 <body>
