upload latest demo

--- a/ui-demo/app/gwt/extra/app/soycReport/compile-report/fragment1_string-0Lits.html
+++ b/ui-demo/app/gwt/extra/app/soycReport/compile-report/fragment1_string-0Lits.html
@@ -51,7 +51,7 @@ Literals of type string
 <td>-300px</td>
 </tr>
 <tr>
-<td>120px</td>
+<td>140px</td>
 </tr>
 <tr>
 <td>5px</td>
@@ -90,10 +90,25 @@ Literals of type string
 <td>Could not RunAsync request [</td>
 </tr>
 <tr>
+<td>DANGER</td>
+</tr>
+<tr>
+<td>DANGER LARGE</td>
+</tr>
+<tr>
+<td>DANGER SMALL</td>
+</tr>
+<tr>
+<td>DANGER XSMALL</td>
+</tr>
+<tr>
 <td>DEEP_ORANGE</td>
 </tr>
 <tr>
 <td>DEEP_PURPLE</td>
+</tr>
+<tr>
+<td>DEFAULT</td>
 </tr>
 <tr>
 <td>Description text here...</td>
@@ -105,7 +120,13 @@ Literals of type string
 <td>GREY</td>
 </tr>
 <tr>
+<td>Heads up! </td>
+</tr>
+<tr>
 <td>INDIGO</td>
+</tr>
+<tr>
+<td>LEFT</td>
 </tr>
 <tr>
 <td>LIGHT_BLUE</td>
@@ -123,6 +144,12 @@ Literals of type string
 <td>Light Green Card</td>
 </tr>
 <tr>
+<td>Lorem ipsum dolor sit amet, id fugit tollit pro, illud nostrud aliquando ad est, quo esse dolorum id</td>
+</tr>
+<tr>
+<td>MIDDLE</td>
+</tr>
+<tr>
 <td>More action selected</td>
 </tr>
 <tr>
@@ -138,6 +165,9 @@ Literals of type string
 <td>PINK</td>
 </tr>
 <tr>
+<td>PRIMARY</td>
+</tr>
+<tr>
 <td>PURPLE</td>
 </tr>
 <tr>
@@ -147,10 +177,25 @@ Literals of type string
 <td>Quis pharetra a pharetra fames blandit. Risus faucibus velit Risus imperdiet mattis neque volutpat, etiam lacinia netus dictum magnis per facilisi sociosqu. Volutpat. Ridiculus nostra.</td>
 </tr>
 <tr>
+<td>RED</td>
+</tr>
+<tr>
+<td>RIGHT</td>
+</tr>
+<tr>
+<td>SUCCESS</td>
+</tr>
+<tr>
+<td>Source Code</td>
+</tr>
+<tr>
 <td>TEAL</td>
 </tr>
 <tr>
 <td>Use any of the available button classes to quickly create a styled button</td>
+</tr>
+<tr>
+<td>Well done! </td>
 </tr>
 <tr>
 <td>YELLOW</td>
@@ -165,6 +210,9 @@ Literals of type string
 <td>battery_charging_full</td>
 </tr>
 <tr>
+<td>block</td>
+</tr>
+<tr>
 <td>block-header</td>
 </tr>
 <tr>
@@ -172,6 +220,12 @@ Literals of type string
 </tr>
 <tr>
 <td>brightness_low</td>
+</tr>
+<tr>
+<td>btn-</td>
+</tr>
+<tr>
+<td>button</td>
 </tr>
 <tr>
 <td>class</td>
@@ -210,6 +264,9 @@ Literals of type string
 <td>com.progressoft.brix.domino.themes.client.ui.views</td>
 </tr>
 <tr>
+<td>com.progressoft.brix.domino.ui.alerts</td>
+</tr>
+<tr>
 <td>com.progressoft.brix.domino.ui.button</td>
 </tr>
 <tr>
@@ -226,6 +283,9 @@ Literals of type string
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.ui.layout</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.ui.lists</td>
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.ui.menu</td>
@@ -261,10 +321,16 @@ Literals of type string
 <td>four</td>
 </tr>
 <tr>
+<td>h2</td>
+</tr>
+<tr>
 <td>headerDescription</td>
 </tr>
 <tr>
 <td>headerTitle</td>
+</tr>
+<tr>
+<td>home</td>
 </tr>
 <tr>
 <td>iconElement</td>
@@ -331,6 +397,9 @@ Literals of type string
 </tr>
 <tr>
 <td>small</td>
+</tr>
+<tr>
+<td>span</td>
 </tr>
 <tr>
 <td>theme</td>
