--- a/ui-demo/app/gwt/extra/app/soycReport/compile-report/initial_string-0Lits.html
+++ b/ui-demo/app/gwt/extra/app/soycReport/compile-report/initial_string-0Lits.html
@@ -153,6 +153,15 @@ Literals of type string
 <td>com.google.web.bindery.event.shared</td>
 </tr>
 <tr>
+<td>com.progressoft.brix.domino.alerts.client</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.alerts.client.contributions</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.alerts.client.presenters</td>
+</tr>
+<tr>
 <td>com.progressoft.brix.domino.api.client</td>
 </tr>
 <tr>
@@ -166,6 +175,15 @@ Literals of type string
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.api.shared.logging</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client.contributions</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client.presenters</td>
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.buttons.client</td>
