--- a/ui-demo/app/gwt/extra/app/soycReport/compile-report/total_string-0Lits.html
+++ b/ui-demo/app/gwt/extra/app/soycReport/compile-report/total_string-0Lits.html
@@ -57,7 +57,7 @@ Literals of type string
 <td>-300px</td>
 </tr>
 <tr>
-<td>120px</td>
+<td>140px</td>
 </tr>
 <tr>
 <td>5px</td>
@@ -102,10 +102,25 @@ Literals of type string
 <td>Could not RunAsync request [</td>
 </tr>
 <tr>
+<td>DANGER</td>
+</tr>
+<tr>
+<td>DANGER LARGE</td>
+</tr>
+<tr>
+<td>DANGER SMALL</td>
+</tr>
+<tr>
+<td>DANGER XSMALL</td>
+</tr>
+<tr>
 <td>DEEP_ORANGE</td>
 </tr>
 <tr>
 <td>DEEP_PURPLE</td>
+</tr>
+<tr>
+<td>DEFAULT</td>
 </tr>
 <tr>
 <td>DOMImplIE9</td>
@@ -138,6 +153,9 @@ Literals of type string
 <td>GREY</td>
 </tr>
 <tr>
+<td>Heads up! </td>
+</tr>
+<tr>
 <td>INDIGO</td>
 </tr>
 <tr>
@@ -145,6 +163,9 @@ Literals of type string
 </tr>
 <tr>
 <td>Index: </td>
+</tr>
+<tr>
+<td>LEFT</td>
 </tr>
 <tr>
 <td>LIGHT_BLUE</td>
@@ -160,6 +181,12 @@ Literals of type string
 </tr>
 <tr>
 <td>Light Green Card</td>
+</tr>
+<tr>
+<td>Lorem ipsum dolor sit amet, id fugit tollit pro, illud nostrud aliquando ad est, quo esse dolorum id</td>
+</tr>
+<tr>
+<td>MIDDLE</td>
 </tr>
 <tr>
 <td>More action selected</td>
@@ -180,6 +207,9 @@ Literals of type string
 <td>POST</td>
 </tr>
 <tr>
+<td>PRIMARY</td>
+</tr>
+<tr>
 <td>PURPLE</td>
 </tr>
 <tr>
@@ -192,7 +222,19 @@ Literals of type string
 <td>Quis pharetra a pharetra fames blandit. Risus faucibus velit Risus imperdiet mattis neque volutpat, etiam lacinia netus dictum magnis per facilisi sociosqu. Volutpat. Ridiculus nostra.</td>
 </tr>
 <tr>
+<td>RED</td>
+</tr>
+<tr>
+<td>RIGHT</td>
+</tr>
+<tr>
+<td>SUCCESS</td>
+</tr>
+<tr>
 <td>SimpleEventBus</td>
+</tr>
+<tr>
+<td>Source Code</td>
 </tr>
 <tr>
 <td>TEAL</td>
@@ -205,6 +247,9 @@ Literals of type string
 </tr>
 <tr>
 <td>WARNING</td>
+</tr>
+<tr>
+<td>Well done! </td>
 </tr>
 <tr>
 <td>WireActivityLogger</td>
@@ -234,6 +279,9 @@ Literals of type string
 <td>battery_charging_full</td>
 </tr>
 <tr>
+<td>block</td>
+</tr>
+<tr>
 <td>block-header</td>
 </tr>
 <tr>
@@ -241,6 +289,12 @@ Literals of type string
 </tr>
 <tr>
 <td>brightness_low</td>
+</tr>
+<tr>
+<td>btn-</td>
+</tr>
+<tr>
+<td>button</td>
 </tr>
 <tr>
 <td>callback</td>
@@ -294,6 +348,15 @@ Literals of type string
 <td>com.google.web.bindery.event.shared</td>
 </tr>
 <tr>
+<td>com.progressoft.brix.domino.alerts.client</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.alerts.client.contributions</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.alerts.client.presenters</td>
+</tr>
+<tr>
 <td>com.progressoft.brix.domino.api.client</td>
 </tr>
 <tr>
@@ -313,6 +376,15 @@ Literals of type string
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.api.shared.logging</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client.contributions</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.badges.client.presenters</td>
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.buttons.client</td>
@@ -447,6 +519,9 @@ Literals of type string
 <td>com.progressoft.brix.domino.themes.client.ui.views</td>
 </tr>
 <tr>
+<td>com.progressoft.brix.domino.ui.alerts</td>
+</tr>
+<tr>
 <td>com.progressoft.brix.domino.ui.button</td>
 </tr>
 <tr>
@@ -463,6 +538,9 @@ Literals of type string
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.ui.layout</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.ui.lists</td>
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.ui.menu</td>
@@ -516,6 +594,9 @@ Literals of type string
 <td>gecko1_8</td>
 </tr>
 <tr>
+<td>h2</td>
+</tr>
+<tr>
 <td>header</td>
 </tr>
 <tr>
@@ -523,6 +604,9 @@ Literals of type string
 </tr>
 <tr>
 <td>headerTitle</td>
+</tr>
+<tr>
+<td>home</td>
 </tr>
 <tr>
 <td>iconElement</td>
@@ -637,6 +721,9 @@ Literals of type string
 </tr>
 <tr>
 <td>small</td>
+</tr>
+<tr>
+<td>span</td>
 </tr>
 <tr>
 <td>theme</td>
