new demo snapshot

--- a/ui-demo/app/gwt/extra/app/soycReport/compile-report/initial_string-0Lits.html
+++ b/ui-demo/app/gwt/extra/app/soycReport/compile-report/initial_string-0Lits.html
@@ -75,6 +75,9 @@ Literals of type string
 <td>DOMImplWebkit</td>
 </tr>
 <tr>
+<td>Effective token : </td>
+</tr>
+<tr>
 <td>Expect more errors.</td>
 </tr>
 <tr>
@@ -174,6 +177,9 @@ Literals of type string
 <td>com.progressoft.brix.domino.api.client.request</td>
 </tr>
 <tr>
+<td>com.progressoft.brix.domino.api.shared.history</td>
+</tr>
+<tr>
 <td>com.progressoft.brix.domino.api.shared.logging</td>
 </tr>
 <tr>
@@ -205,6 +211,9 @@ Literals of type string
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.client.commons.extensions</td>
+</tr>
+<tr>
+<td>com.progressoft.brix.domino.client.commons.history</td>
 </tr>
 <tr>
 <td>com.progressoft.brix.domino.client.commons.request</td>
