--- a/ui-demo/app/gwt/extra/app/soycReport/compile-report/total_string-0Lits.html
+++ b/ui-demo/app/gwt/extra/app/soycReport/compile-report/total_string-0Lits.html
@@ -141,6 +141,9 @@ Literals of type string
 <td>Description text here...</td>
 </tr>
 <tr>
+<td>Effective token : </td>
+</tr>
+<tr>
 <td>Expect more errors.</td>
 </tr>
 <tr>
