fix index page urls

--- a/domino-ui/index.html
+++ b/domino-ui/index.html
@@ -3,22 +3,22 @@
 <html>
 <head>
     <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="/static/ui-demo.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/ui-demo.css">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link type="text/css" rel="stylesheet" href="/static/font/material-icons.css">
-    <link type="text/css" rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.css">
-    <link type="text/css" rel="stylesheet" href="/static/plugins/node-waves/waves.css">
-    <link type="text/css" rel="stylesheet" href="/static/plugins/animate-css/animate.css">
-    <link type="text/css" rel="stylesheet" href="/static/plugins/morrisjs/morris.css">
-    <link type="text/css" rel="stylesheet" href="/static/plugins/waitme/waitMe.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/style.css">
-    <link type="text/css" rel="stylesheet" href="/static/css/themes/all-themes.css">
-    <script src="/static/plugins/node-waves/waves.js" type="text/javascript"></script>
+    <link type="text/css" rel="stylesheet" href="/domino-ui/font/material-icons.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/bootstrap/css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/node-waves/waves.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/animate-css/animate.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/morrisjs/morris.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/waitme/waitMe.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/css/themes/all-themes.css">
+    <script src="/domino-ui/plugins/node-waves/waves.js" type="text/javascript"></script>
 
-    <title>ui-demo</title>
+    <title>Domino UI demo app</title>
 
-    <script src="/static/app.nocache.js"></script>
+    <script src="/domino-ui/app.nocache.js"></script>
 </head>
 
 <body>
@@ -32,6 +32,5 @@
         in order for this application to display correctly.
     </div>
 </noscript>
-
 </body>
 </html>
