--- a/domino-ui/gwt/extra/app/soycReport/compile-report/fragment1_jre-0Classes.html
+++ b/domino-ui/gwt/extra/app/soycReport/compile-report/fragment1_jre-0Classes.html
@@ -63,203 +63,203 @@ Size <span class="soyc-th-units">(Bytes)</span>
 <td>java.util.LinkedHashMap</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:16.437247395515442%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:15.4450923204422%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 609
 </td>
-<td class="soyc-percent-col">16.4%</td>
+<td class="soyc-percent-col">15.4%</td>
 </tr>
 <tr>
 <td>java.util.Arrays$ArrayList</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:13.549257814884186%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:12.731422483921051%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 502
 </td>
-<td class="soyc-percent-col">13.5%</td>
-</tr>
-<tr>
-<td>java.util.InternalHashCodeMap</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:6.450742483139038%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-239
-</td>
-<td class="soyc-percent-col">6.5%</td>
-</tr>
-<tr>
-<td>java.util.LinkedHashMap$EntrySet$EntryIterator</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:6.36977031826973%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-236
-</td>
-<td class="soyc-percent-col">6.4%</td>
-</tr>
-<tr>
-<td>java.util.LinkedHashMap$EntrySet</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:5.587044358253479%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-207
-</td>
-<td class="soyc-percent-col">5.6%</td>
-</tr>
-<tr>
-<td>java.util.LinkedHashMap$ChainEntry</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:5.2901484072208405%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-196
-</td>
-<td class="soyc-percent-col">5.3%</td>
-</tr>
-<tr>
-<td>java.util.Collections$UnmodifiableListIterator</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:4.129554703831673%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-153
-</td>
-<td class="soyc-percent-col">4.1%</td>
-</tr>
-<tr>
-<td>java.lang.Throwable</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:3.8596492260694504%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-143
-</td>
-<td class="soyc-percent-col">3.9%</td>
-</tr>
-<tr>
-<td>java.util.LinkedList$ListIteratorImpl</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:3.6437246948480606%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-135
-</td>
-<td class="soyc-percent-col">3.6%</td>
-</tr>
-<tr>
-<td>java.util.Collections$UnmodifiableList</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:3.589743748307228%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-133
-</td>
-<td class="soyc-percent-col">3.6%</td>
-</tr>
-<tr>
-<td>java.util.AbstractList</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:3.4008096903562546%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-126
-</td>
-<td class="soyc-percent-col">3.4%</td>
-</tr>
-<tr>
-<td>java.util.AbstractHashMap</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.9419703409075737%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-109
-</td>
-<td class="soyc-percent-col">2.9%</td>
-</tr>
-<tr>
-<td>java.util.HashSet</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.834008075296879%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-105
-</td>
-<td class="soyc-percent-col">2.8%</td>
-</tr>
-<tr>
-<td>java.util.InternalStringMap</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.6450742036104202%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-98
-</td>
-<td class="soyc-percent-col">2.6%</td>
-</tr>
-<tr>
-<td>java.util.AbstractList$ListIteratorImpl</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.5371119379997253%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-94
-</td>
-<td class="soyc-percent-col">2.5%</td>
-</tr>
-<tr>
-<td>java.util.InternalJsMap</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.3211875930428505%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-86
-</td>
-<td class="soyc-percent-col">2.3%</td>
+<td class="soyc-percent-col">12.7%</td>
 </tr>
 <tr>
 <td>java.lang.String</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.1862348541617393%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:6.3403502106666565%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
-81
+250
+</td>
+<td class="soyc-percent-col">6.3%</td>
+</tr>
+<tr>
+<td>java.util.InternalHashCodeMap</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:6.061374768614769%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+239
+</td>
+<td class="soyc-percent-col">6.1%</td>
+</tr>
+<tr>
+<td>java.util.LinkedHashMap$EntrySet$EntryIterator</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:5.985290557146072%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+236
+</td>
+<td class="soyc-percent-col">6.0%</td>
+</tr>
+<tr>
+<td>java.util.LinkedHashMap$EntrySet</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:5.249809846282005%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+207
+</td>
+<td class="soyc-percent-col">5.2%</td>
+</tr>
+<tr>
+<td>java.util.LinkedHashMap$ChainEntry</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:4.970834404230118%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+196
+</td>
+<td class="soyc-percent-col">5.0%</td>
+</tr>
+<tr>
+<td>java.util.Collections$UnmodifiableListIterator</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:3.8802940398454666%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+153
+</td>
+<td class="soyc-percent-col">3.9%</td>
+</tr>
+<tr>
+<td>java.lang.Throwable</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:3.626680374145508%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+143
+</td>
+<td class="soyc-percent-col">3.6%</td>
+</tr>
+<tr>
+<td>java.util.LinkedList$ListIteratorImpl</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:3.423789143562317%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+135
+</td>
+<td class="soyc-percent-col">3.4%</td>
+</tr>
+<tr>
+<td>java.util.AbstractList</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:3.195536509156227%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+126
+</td>
+<td class="soyc-percent-col">3.2%</td>
+</tr>
+<tr>
+<td>java.util.AbstractHashMap</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.7643926441669464%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+109
+</td>
+<td class="soyc-percent-col">2.8%</td>
+</tr>
+<tr>
+<td>java.util.stream.Collectors$lambda$6$Type</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.5361400097608566%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+100
+</td>
+<td class="soyc-percent-col">2.5%</td>
+</tr>
+<tr>
+<td>java.util.InternalStringMap</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.485417202115059%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+98
+</td>
+<td class="soyc-percent-col">2.5%</td>
+</tr>
+<tr>
+<td>java.util.Collections$UnmodifiableList</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.4093329906463623%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+95
+</td>
+<td class="soyc-percent-col">2.4%</td>
+</tr>
+<tr>
+<td>java.util.AbstractList$ListIteratorImpl</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.3839715868234634%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+94
+</td>
+<td class="soyc-percent-col">2.4%</td>
+</tr>
+<tr>
+<td>java.util.InternalJsMap</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:2.1810803562402725%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+86
 </td>
 <td class="soyc-percent-col">2.2%</td>
 </tr>
@@ -267,91 +267,103 @@ Size <span class="soyc-th-units">(Bytes)</span>
 <td>javaemul.internal.InternalPreconditions</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:2.0782725885510445%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:1.9528277218341827%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 77
 </td>
-<td class="soyc-percent-col">2.1%</td>
+<td class="soyc-percent-col">2.0%</td>
 </tr>
 <tr>
 <td>java.util.Objects</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.9703103229403496%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:1.8513821065425873%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 73
 </td>
-<td class="soyc-percent-col">2.0%</td>
+<td class="soyc-percent-col">1.9%</td>
 </tr>
 <tr>
 <td>java.util.Collections$EmptyListIterator</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.8353575840592384%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:1.7245752736926079%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 68
 </td>
-<td class="soyc-percent-col">1.8%</td>
+<td class="soyc-percent-col">1.7%</td>
 </tr>
 <tr>
-<td>java.util.ArrayList</a></td>
+<td>java.util.HashSet</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.1605937965214252%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:1.6231296584010124%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
-43
+64
 </td>
-<td class="soyc-percent-col">1.2%</td>
+<td class="soyc-percent-col">1.6%</td>
+</tr>
+<tr>
+<td>java.util.stream.Collectors$9methodref$add$Type</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:1.521684043109417%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+60
+</td>
+<td class="soyc-percent-col">1.5%</td>
+</tr>
+<tr>
+<td>java.util.stream.Collectors$11methodref$toString$Type</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:1.3948770239949226%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+55
+</td>
+<td class="soyc-percent-col">1.4%</td>
 </tr>
 <tr>
 <td>java.util.ConcurrentModificationDetector</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.1066126637160778%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:1.0398173704743385%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 41
 </td>
-<td class="soyc-percent-col">1.1%</td>
-</tr>
-<tr>
-<td>java.util.AbstractCollection</a></td>
-<td class="soyc-bargraph-col">
-<div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.0526316240429878%;" class="soyc-bar-graph-fill goog-inline-block"></div>
-</div>
-</td>
-<td class="soyc-numerical-col">
-39
-</td>
-<td class="soyc-percent-col">1.1%</td>
+<td class="soyc-percent-col">1.0%</td>
 </tr>
 <tr>
 <td>java.util.Collections$EmptyList</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.0526316240429878%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:0.9890945628285408%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 39
 </td>
-<td class="soyc-percent-col">1.1%</td>
+<td class="soyc-percent-col">1.0%</td>
 </tr>
 <tr>
-<td>java.util.Collections$UnmodifiableCollection</a></td>
+<td>java.util.StringJoiner</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:1.025641057640314%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:0.9637331590056419%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
@@ -363,13 +375,25 @@ Size <span class="soyc-th-units">(Bytes)</span>
 <td>java.util.LinkedHashSet</a></td>
 <td class="soyc-bargraph-col">
 <div class="soyc-bar-graph goog-inline-block">
-<div style="width:0.9446693584322929%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+<div style="width:0.8876490406692028%;" class="soyc-bar-graph-fill goog-inline-block"></div>
 </div>
 </td>
 <td class="soyc-numerical-col">
 35
 </td>
 <td class="soyc-percent-col">0.9%</td>
+</tr>
+<tr>
+<td>java.util.stream.Collectors$10methodref$merge$Type</a></td>
+<td class="soyc-bargraph-col">
+<div class="soyc-bar-graph goog-inline-block">
+<div style="width:0.38042101077735424%;" class="soyc-bar-graph-fill goog-inline-block"></div>
+</div>
+</td>
+<td class="soyc-numerical-col">
+15
+</td>
+<td class="soyc-percent-col">0.4%</td>
 </tr>
 </div>
 </body>
