--- a/domino-ui/index.html
+++ b/domino-ui/index.html
@@ -11,6 +11,8 @@
     <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/node-waves/waves.css">
     <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/animate-css/animate.css">
     <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/waitme/waitMe.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/plugins/bootstrap-select/css/bootstrap-select.css">
+    <link type="text/css" rel="stylesheet" href="/domino-ui/css/materialize.css">
     <link type="text/css" rel="stylesheet" href="/domino-ui/css/style.css">
     <link type="text/css" rel="stylesheet" href="/domino-ui/css/themes/all-themes.css">
 
